Add a setting for padding and change the look of the widget and check for overflow and accomodate with scrolling text

--- a/config.json
+++ b/config.json
@@ -1,4 +1,5 @@
 {
+	"disablepadding": false,
 	"usingyoutubemusic": true,
 	"comment": "Below are lists, you can use multiple imports by separating with a , (comma)",
 	"customcss": ["./customwidget.css"],
