--- a/config.json
+++ b/config.json
@@ -1,7 +1,8 @@
 {
+	"originalhtml": true,
+	"originaljs": true,
+	"originalcss": false,
 	"disablepadding": false,
 	"usingyoutubemusic": true,
-	"comment": "Below are lists, you can use multiple imports by separating with a , (comma)",
-	"customcss": ["./customwidget.css"],
-	"customjs": ["./customwidget.js"]
+	"style": ["./DefaultWidget"]
 }
