--- a/config.json
+++ b/config.json
@@ -1,8 +1,5 @@
 {
-	"originalhtml": true,
-	"originaljs": true,
-	"originalcss": false,
-	"disablepadding": false,
-	"usingyoutubemusic": true,
-	"style": ["./DefaultWidget"]
+	"disablePadding": false,
+	"matchingColors": true,
+	"addEmojis": true
 }
