--- a/config.ini
+++ b/config.ini
@@ -28,9 +28,12 @@ alwaysBrightenColors=false
 centerText=true
 
 # How often to refresh song info? (In milliseconds)
-# Due to my bad coding skills this is also tied to transitions
+# default=200
+songRefresh=200
+
+# Transition timeouts, timeout between changing opacity to 0 and back to 1 and such
 # default=500
-songRefresh=500
+transitionTimeout=500
 
 # How often to refresh config? (In milliseconds)
 # default=5000
@@ -44,6 +47,10 @@ scrollTime=8000
 # Makes the progress bar compact, displaying as a line on the bottom of the overlay
 # default=false
 progress=true
+
+# How much the compact progress bars colors blend together (---Album-color---/---Inverse-album-color---)
+# default=1                                                                 ^^^(How much this part blends)
+progressBarBlend=1
 
 # Which side should the border be on?
 # left,right,down,up, or leave empty
