remove transition and fix config mismatched options

--- a/config.ini
+++ b/config.ini
@@ -40,7 +40,7 @@ transitionTimeout=500
 configRefresh=5000
 
 # How fast the text scrolls right to left when the title/album/artist text is too long (In milliseconds)
-# default=800
+# default=8000
 scrollTime=8000
 
 [Compact]
@@ -55,7 +55,7 @@ progressBarBlend=1
 # Which side should the border be on?
 # left,right,down,up, or leave empty
 # default=down
-borderSide=up
+borderSide=down
 
 # disable progress bar altogether
 # default=false
